	PR ipa/69241 	PR c++/69649 	* gimplify.c (gimplify_modify_expr): Set lhs even for noreturn 	calls if the return type is TREE_ADDRESSABLE. 	* cgraphunit.c (cgraph_node::expand_thunk): Likewise. 	* ipa-split.c (split_function): Fix doubled "we" in comment. 	Use void return type for the split part even if 	!split_point->split_part_set_retval.

* g++.dg/ipa/pr69241-1.C: New test.
	* g++.dg/ipa/pr69241-2.C: New test.
	* g++.dg/ipa/pr69241-3.C: New test.
	* g++.dg/ipa/pr69649.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233271 138bc75d-0d04-0410-961f-82ee72b054a4